--- a/src/main/webapp/pages/Produto.xhtml
+++ b/src/main/webapp/pages/Produto.xhtml
@@ -127,18 +127,11 @@
 
                     </p:selectOneMenu>
 
-                    <p:outputLabel value="Fabricante:" />
+                    <p:outputLabel value="Fabricante:" for="fabricante" />
                     <h:panelGrid columns="2">
-                        <p:selectOneMenu id="oneMenuFabricante" filter="true"
-                                         validatorMessage="Selecione um Fabricante!"
-                                         value="#{MBProduto.produto.fornecedor.codigo}" required="true"
-                                         requiredMessage="Selecione um fabricante">
-                            <f:selectItem itemValue="" itemLabel="Selecione"
-                                          noSelectionOption="true" />
-                            <f:selectItems value="#{MBProduto.comboFornecedores}" var="item"
-                                           itemValue="#{item.codigo}" itemLabel="#{item.razaoSocialNome}" />
-                        </p:selectOneMenu>
-                        <p:commandButton value="Adicionar" />
+                        <p:outputLabel id="fabricante" value="#{MBProduto.produto.fornecedor.razaoSocialNome}"  />
+                            
+                      
                     </h:panelGrid>
                     <p:outputLabel value="Anexar imagem:" />
 
