--- a/src/main/webapp/pages/ConCidade.xhtml
+++ b/src/main/webapp/pages/ConCidade.xhtml
@@ -5,10 +5,10 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:p="http://primefaces.org/ui"
-                template="/resources/Templates/modeloSistema.xhtml">
+             template="/templates/modeloSistema.xhtml">
 
-    <ui:define name="Menu">
-        <ui:include src="/includes/menuPrincipal.xhtml" />
+    <ui:define name="menu">
+        <ui:include src="/includes/menuPrincipal.xhtml"></ui:include>
     </ui:define>
 
     <ui:define name="Conteudo">
