--- a/src/main/webapp/pages/Login.xhtml
+++ b/src/main/webapp/pages/Login.xhtml
@@ -1,52 +1,55 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:p="http://primefaces.org/ui"
-                template="/templates/modeloSistema.xhtml">
+                xmlns:p="http://primefaces.org/ui">
 
-    <ui:define name="menu">
-        <ui:include src="/includes/menuPrincipal.xhtml" />
-    </ui:define>
+    <h:head>
+        <link rel="shortcut icon" type="image/x-icon"
+              href="#{request.contextPath}/resources/imagens/icone.ico" />
 
-    <ui:define name="Conteudo">
+     
+        <title>Login</title>
 
-
-        <h:form id="formLogin">
-            <h:body>
-                <p:growl id="growl" sticky="true" showDetail="true" life="3000" />
-
-                <p:dialog header="Login" widgetVar="dlg" resizable="false" visible="true"
-                          >
-
-                    <h:panelGrid columns="2" cellpadding="5">
-
-                        <h:outputLabel value="Usuario:*" />
-
-                        <p:inputText required="true" />
-
-                        <h:outputLabel value="Senha:*" />
-
-                        <p:password required="true" label="senha"
-                                    requiredMessage=" Digite a senha" />
-
-                        <f:facet name="footer">
-
-                            <p:commandButton value="Login" />
-                        </f:facet>
-
-                    </h:panelGrid>
-                </p:dialog>
+    </h:head>
+    <h:form>
+        <h:body>
 
 
+            <p:dialog header="Login" widgetVar="dlg" resizable="false" visible="true" >
+
+                <h:panelGrid columns="2" cellpadding="5">
+
+                    <h:outputLabel  value="Usuário:*" />
+
+                    <p:inputText   value="" required="true" />
+
+                    <h:outputLabel   value="Senha:*" />
+
+                    <p:password value="" required="true" label="senha" requiredMessage=" Digite a senha" />
+
+                    <f:facet name="footer">
+
+                        <p:commandButton value="Login" 
+                                         oncomplete="verificar(xhr, status, args)" update=""/>
+                    </f:facet>  
+                </h:panelGrid>
+            </p:dialog>
 
 
+            <script type="text/javascript">
+                function verificar(xhr, status, args) {
+                    if (args.validationFailed || !args.loggedIn) {
+                        PF('dlg').jq.effect("shake", {times: 5}, 100);
+                    } else {
+                        PF('dlg').hide();
+                        $('#loginLink').fadeOut();
+                    }
+                }
+            </script>
 
-
-            </h:body>
-        </h:form>
-
-    </ui:define>
+        </h:body>
+    </h:form>
 </ui:composition>
